--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
+  fluttertoast: ^8.0.3
+  sqflite_sqlcipher: ^2.0.0
+  sqflite: ^1.3.0
+  path: ^1.8.0
+  cryptography: ^2.0.1
+  aes_crypt: ^0.1.1
+  pointycastle: ^3.0.1
 
 dev_dependencies:
   flutter_test:
