--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,15 @@ dependencies:
   sqflite_sqlcipher: ^2.0.0
   sqflite: ^1.3.0
   path: ^1.8.0
-  cryptography: ^2.0.1
+  path_provider: ^2.0.1
+  file_picker: ^3.0.0
   aes_crypt: ^0.1.1
   pointycastle: ^3.0.1
+  encrypt: ^5.0.0
+  simple_permissions:
+    git:
+      url: https://github.com/tq-systems/simple_permissions.git
+  share: ^2.0.1
 
 dev_dependencies:
   flutter_test:
