--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
   fluttertoast: ^8.0.3
-  sqflite: ^1.3.0
+  sqflite: ^2.0.0+3
   path: ^1.8.0
   path_provider: ^2.0.1
   file_picker: ^3.0.0
-  aes_crypt: ^0.1.1
   pointycastle: ^3.0.1
   encrypt: ^5.0.0
   simple_permissions:
