--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.example.trunk">
    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
    <application
+        android:requestLegacyExternalStorage="true"
         android:label="trunk"
         android:icon="@mipmap/ic_launcher">
         <activity
