--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   file_picker: ^3.0.0
   pointycastle: ^3.0.1
   encrypt: ^5.0.0
+  image: ^3.0.2
   simple_permissions:
     git:
       url: https://github.com/tq-systems/simple_permissions.git
