--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
     git:
       url: https://github.com/tq-systems/simple_permissions.git
   share: ^2.0.1
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
