--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image: ^3.0.2
   flutter_archive: ^3.0.0
   flutter_spinkit: "^4.1.2"
+  shared_preferences: ^2.0.5
 
   simple_permissions:
     git:
@@ -86,12 +87,21 @@ flutter:
   fonts:
     - family: montserrat
       fonts:
-        - asset: fonts/Montserrat-Regular.ttf
-        - asset: fonts/Montserrat-Medium.ttf
+        - asset: fonts/montserrat/Montserrat-Regular.ttf
+        - asset: fonts/montserrat/Montserrat-Medium.ttf
           weight: 500
-        - asset: fonts/Montserrat-Bold.ttf
+        - asset: fonts/montserrat/Montserrat-Bold.ttf
           weight: 700
-        - asset: fonts/Montserrat-Black.ttf
+        - asset: fonts/montserrat/Montserrat-Black.ttf
+          weight: 900
+    - family: mulish
+      fonts:
+        - asset: fonts/mulish/Mulish-Regular.ttf
+        - asset: fonts/mulish/Mulish-Medium.ttf
+          weight: 500
+        - asset: fonts/mulish/Mulish-Bold.ttf
+          weight: 700
+        - asset: fonts/mulish/Mulish-Black.ttf
           weight: 900
         
     # - family: Trajan Pro
